--- a/index.html
+++ b/index.html
@@ -58,7 +58,111 @@ width: 35%;
 min-width: 250px;
 text-align: center;
 border-right: 1px solid #eee;
-padjpg" alt="許玉麗照片">
+padding-right: 20px;
+}
+
+.avatar {
+width: 150px;
+height: 150px;
+overflow: hidden;
+border-radius: 10px;
+border: 3px solid #fff;
+box-shadow: 0 0 6px rgba(0,0,0,0.1);
+margin: 0 auto;
+}
+
+.avatar img {
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+.stu-id {
+margin-top: 10px;
+font-weight: bold;
+color: #333;
+font-size: 14px;
+}
+
+.right-column {
+flex: 1;
+padding-left: 25px;
+}
+
+.info h2 {
+font-size: 22px;
+color: #333;
+margin: 0 0 5px 0;
+}
+
+.info p {
+margin: 3px 0;
+font-size: 14px;
+color: #444;
+}
+
+.skill-section {
+display: flex;
+justify-content: space-between;
+flex-wrap: wrap;
+margin-top: 20px;
+}
+
+.block {
+flex: 1;
+min-width: 120px;
+margin-right: 15px;
+}
+
+h3 {
+color: #0078d7;
+font-size: 16px;
+margin-top: 10px;
+margin-bottom: 8px;
+}
+
+.tags span {
+display: inline-block;
+background: #e8f2ff;
+color: #0078d7;
+border-radius: 8px;
+padding: 5px 10px;
+margin: 3px;
+font-size: 13px;
+}
+
+section {
+padding: 0 30px 30px 30px;
+line-height: 1.8;
+color: #333;
+font-size: 15px;
+}
+
+ul {
+padding-left: 20px;
+}
+
+footer {
+background: #fafafa;
+border-top: 1px solid #eee;
+text-align: center;
+color: #777;
+font-size: 13px;
+padding: 10px;
+}
+</style>
+</head>
+<body>
+<div class="resume">
+<div class="header">
+<h1>Resume20251020abc · 許玉麗</h1>
+<button onclick="window.print()">列印 / 存為 PDF</button>
+</div>
+
+<div class="main">
+<div class="left-column">
+<div class="avatar">
+<img src="profile.jpg" alt="許玉麗照片">
 </div>
 <div class="stu-id">學號：114011122</div>
 </div>
@@ -66,11 +170,9 @@ padjpg" alt="許玉麗照片">
 <div class="right-column">
 <div class="info">
 <h2>許玉麗</h2>
-<p><strong>學校：</strong>亞洲大學</p>
-<p><strong>科系：</strong>建管系</p>
-<p><strong>班級：</strong>1P</p>
+<p><strong>學校：</strong>亞洲大學 一年級</p>
 <p><strong>Email：</strong>huangocle.04032006@gmail.com</p>
-<p><strong>電話：</strong>0970-118-595</p>
+<p><strong>電話：</strong>0984-087-979</p>
 <p><strong>地點：</strong>台中市，台灣</p>
 </div>
 
@@ -80,17 +182,55 @@ padjpg" alt="許玉麗照片">
 <div class="tags">
 <span>基礎文書處理</span>
 <span>HTML / CSS / JavaScript（基礎）</span>
-<span>烹飪</span>
+<span>西點 / 烹飪</span>
 </div>
 </div>
 
 <div class="block">
 <h3>語言</h3>
 <div class="tags">
-<span>越南語</span>
-<span>中文</span>
+<span>越南語（母語）</span>
+<span>中文（基礎）</span>
 </div>
 </div>
 
 <div class="block">
-<h3>興趣</
+<h3>興趣</h3>
+<div class="tags">
+<span>繪畫</span>
+<span>運動</span>
+<span>烹飪</span>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+<section>
+<h3>個人簡介</h3>
+<p>我是亞洲大學一年級學生，熱愛藝術與創作。對繪畫、設計與美感表達有高度興趣，喜歡挑戰新事物。<br>
+目前無正式工作經驗 — 有志於從基礎學習與練習繪畫，不斷提升自己的藝術能力。</p>
+
+
+<h3>學歷</h3>
+<p>亞洲大學 — 在學中・一年級</p>
+
+<h3>實作 / 專案</h3>
+<ul>
+<li>校園繪畫學習：參與校內各類繪畫作品觀摩與練習。</li>
+<li>個人創作作品：擁有多幅個人繪畫創作，風格多樣。</li>
+</ul>
+
+<h3>工作經驗</h3>
+<p>目前無正式工作經驗 — 持續學習與練習以累積實務能力。</p>
+
+<h3>職涯目標</h3>
+<p>希望在未來學習與探索中，不斷累積新的知識與技能，最終成為一位充滿創意與熱情的畫家（Hoạ sĩ）。</p>
+</section>
+
+<footer>
+這是一份自動產生的個人履歷範本，可按「列印 / 存為 PDF」輸出正式檔案。
+</footer>
+</div>
+</body>
+</html>
